--- a/app/views/users/registrations/new.html.slim
+++ b/app/views/users/registrations/new.html.slim
@@ -4,8 +4,12 @@ h2
   = render "users/shared/error_messages", resource: resource
   .field
     = f.label :name
+    br
+  = f.text_field :name, autofocus: true
   br
-  = f.text_field :name, autofocus: true, autocomplete: "name"
+  .field
+    = f.label :email
+    = f.email_field :email, autofocus: true, autocomplete: "email"
   .field
     = f.label :password
     - if @minimum_password_length
@@ -13,12 +17,12 @@ h2
         | (
         = @minimum_password_length
         |  characters minimum)
-  br
   = f.password_field :password, autocomplete: "new-password"
   .field
     = f.label :password_confirmation
-  br
   = f.password_field :password_confirmation, autocomplete: "new-password"
+  br
   .actions
+  br
     = f.submit "Sign up"
 = render "users/shared/links"
