--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,7 +6,18 @@ html
     meta[name="viewport" content="width=device-width,initial-scale=1"]
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag "application", "data-turbo-track": "reload"
+    = stylesheet_link_tag "application", "dataa-turbo-track": "reload"
     = javascript_include_tag "application", "data-turbo-track": "reload", defer: true
   body
+    .app-title.navbar.navbar-expand-md.navbar-light.bg-light
+      .navbar-brand Taskleaf
+
+      ul.navbar-nav.ml-auto
+        #先ほどヘルパーメソッドに定義したcurrent_userメソッドを利用して、ログインしている時とログアウトしている時で画面の表示を変える
+      - if current_user
+        li.nav-item= link_to 'タスク一覧',tasks_path, class:'nav-link'
+        li.nav-item= link_to 'ユーザー一覧',admin_users_path, class:'nav-link'
+        li.nav-item= link_to 'ログアウト',logout_path,method: :delete, class:'nav-link'
+      - else
+        li.nav-item= link_to 'ログイン',login_path, class:'nav-link'
     = yield
